--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/stantheman12-code/muirheadfc",
+  "homepage": "https://stantheman12-code.github.io/muirheadfc",
   "name": "assignment-2-react",
   "version": "0.1.0",
   "private": true,
